deployments/monstache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monstache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monstache
  template:
    metadata:
      labels:
        app: monstache
    spec:
      containers:
      - name: monstache
        image: findsources/monstache:latest
        command: ["/bin/sh"]
        args: ["-c", "./build/linux-amd64/monstache -f config.toml"]
        ports:
        - containerPort: 8080
