deployments/admin-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: admin-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-frontend
  template:
    metadata:
      labels:
        app: admin-frontend
    spec:
      containers:
      - name: admin-frontend
        image: findsources/admin-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
