deployments/admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: admin
        image: findsources/admin:latest
        imagePullPolicy: Always
        command: ["/bin/sh"]
        args: ["-c", "pipenv run uvicorn admin.main:app --host 0.0.0.0"]
        ports:
        - containerPort: 8000
