deployments/consumer.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: consumer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: findsources/consumer:latest
        imagePullPolicy: Always
        command: ["/bin/sh"]
        args: ["-c", "pipenv run uvicorn consumer.main:app --host 0.0.0.0"]
        ports:
        - containerPort: 8000
