deployments/producer.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: producer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: producer
        image: findsources/producer:latest
        imagePullPolicy: Always
        command: ["/bin/sh"]
        args: ["-c", "pipenv run uvicorn producer.main:app --host 0.0.0.0"]
        ports:
        - containerPort: 8000
