deployments/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - findsources.co.uk
      secretName: findsources-kubernetes-tls
  rules:
    - host: findsources.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: producer-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - findsources.co.uk
      secretName: findsources-kubernetes-tls
  rules:
    - host: findsources.co.uk
      http:
        paths:
          - path: /api/producer/(.*)
            backend:
              serviceName: producer
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: consumer-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - findsources.co.uk
      secretName: findsources-kubernetes-tls
  rules:
    - host: findsources.co.uk
      http:
        paths:
          - path: /api/consumer/(.*)
            backend:
              serviceName: consumer
              servicePort: 80
